# visualization-git

./: Action.h  Animations.cpp  Animations.h  CMakeLists.txt  Constants.h  PointAndLine.h  RGBA.h  States.cpp  States.h  Tree.cpp  Tree.h  Utils.cpp  Utils.h  WokWithGit.cpp  WorkWithGit.h  main.cpp
graphic/: GraphicEngine.cpp  GraphicEngine.h  Shader.h  ShaderProgram.h
resources/: fragment-shader  vertex-shader
